# SDL2_test

./: .gitignore  AEMesh.h  AEUnits.h  CMakeLists.txt  FindFFMPEG.cmake  GpuBuffer.h  cubemap.cpp  frag.shd  frag_33.shd  frag_cube.shd  frag_light.shd  frag_proj.shd  frag_video.shd  geom_33.shd  geometry.cpp  main.cpp  sdl2_test.sublime-workspace  tessctrl_43.shd  tesseval_43.shd  vert.shd  vert_33.shd  vert_cube.shd  vert_light.shd  vert_proj.shd  vert_video.shd  video.cpp
